# digi_leap_old

./: .dev_env.bash  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  00_download_images.py  01_download_images.py  01_load_idigbio_data.py  01_setup_label_detection.ipynb  02_display_bboxes.ipynb  02_display_bboxes.jl  02_download_images.py  02_load_idigbio_data.py  03_generate_label_data.py  03_generate_label_text.py  03_ocr_expedition.ipynb  03_values_for_imputation.py  04_augment_label_data.py  04_generate_label_text.py  04_label_data_defaults.py  05_generate_label_text.py  05_label_images.py  CMakeLists.txt  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  client.py  crop_labels.py  dev_env.bash  digi_leap.cfg  digi_leap.py  digi_leap.yaml  display_bboxes.ipynb  download_images.py  ensemble_images.py  get_typewritten_labels.py  label_finder.py  label_ocr.py  (+29 more)
.virtual_documents/: 01_setup_label_detection.ipynb  02_display_bboxes.ipynb  03_ocr_expedition.ipynb
args/: 01_idigbio_occurrence_raw.args  03_values_for_imputation.args  04_generate_label_data.args  04_generate_label_text.args  05_label_images.args  05_test_images.args  _test_label_finder.args  build_label.args  build_labels.args  evaluate_label_finder.args  extract_traits.args  faster_rcnn_test.args  faster_rcnn_train.args  faster_rcnn_use.args  finder_qc_expedition.args  finder_test_effdet.args  finder_test_fasterrcnn.args  finder_test_label-babel2.args  finder_train.args  finder_train_effdet.args  finder_train_fasterrcnn.args  idigbio_load.args  is_correction_needed.args  label_finder_predict.args  label_finder_test.args  label_finder_tester.args  label_finder_train.args  label_finder_train_fasterrcnn.args  label_finder_trainer.args  ocr_ensemble.args  ocr_in_house_qc.args  ocr_labels.args  output_traits.args  prepare_data.args  prepare_labels.args  rise_of_machines_build.args  rise_of_machines_reconcile.args  rule_ner.args  setup_split_sheets.args  (+5 more)
(+647 files in other folders)
